--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,13 @@
     scroll-behavior: smooth;
 }
 
-/* html {
-    height: 100%;
-} */
 
 body {
     background: var(--color-bg);
     /* font-family: var(--font-family); */
     color: var(--color-text);
     height: 100%;
+    width: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
