--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -66,7 +66,9 @@
     border-radius: 5px;
     border: 0;
     outline: none;
-    box-shadow: var(--box-shadow);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 
 }
 
